@@ -1,3 +1,10 @@
+2007-07-31  Jan Schmidt  <thaytan@mad.scientist.com>
+
+	* gst/gstpluginfeature.c: (gst_plugin_feature_finalize),
+	(gst_plugin_feature_set_name):
+	Revert patch from #459466 until after the release and we can work
+	out exactly what the problem is (if any).
+
 2007-07-26  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* docs/gst/gstreamer-sections.txt:
